Bulk updateof profiles.

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -158,10 +158,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>After 15 years of perfecting his craft, Andrew has a body of work to his name which most can only aspire
-                    to. He has the rare knack of being able to take an idea and distil it down to its raw ingredients, thus
-                    providing the basis for a thoughtful design. Andrew inspires our teams to constantly try new things and
-                    to evolve.</p>
+                  <p>Andrew has a body of work to his name which most can only aspire to. He has the rare knack of being able to take an idea and distil it down to its raw ingredients, thus providing the basis for a thoughtful design. Andrew inspires our teams to constantly try new things and to evolve. He’s always inside the mind of the user, and ensures User Experience is at the core of everything we do. Andrew moonlights as the office DIY advisor, and when he’s not tinkling the ivories on his home piano he’s eyeing up his next home improvement project. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/andrew"></div>
                 </div>
               </div>
@@ -269,9 +266,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Ed is passionate about learning and mentoring. He is actively engaged in the local tech community having
-                    organised dozens of talks at CHCH.js, run NodeSchool events and the southern hemisphere’s first Node.js
-                    conference. When he’s not writing code you might find him in the hills or jamming on the guitar.</p>
+                  <p>Ed is a vital member of the DevOps team, and plays a key role in supporting our production applications. He’s had a hand in almost every Media Suite project, and can jump into anything, any time. He is passionate about learning and mentoring and is the driving force behind the Media Suite Stewardship programme which provides one-on-one support for the team. He spends his down time preventing toddler-driven destruction, cooking with his family and is keen cycle commuter.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ed"></div>
                 </div>
               </div>
@@ -312,9 +307,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>The multi-talented Ersin is part of our Node.js team but is equally talented in PHP, Objective C, Ruby
-                    &amp; Go. His current fascination is with containerised services and learning to work remote. Check the
-                    surf forecast for his likely locale.</p>
+                  <p>The multi-talented Ersin is a jack of all trades, with a particular interest in open web standards, legislation as code, and is always committed to maintaining his work-life balance. He’s a dab hand in JavaScript, PHP, Python and Go. Ersin can frequently be spotted at local MeetUps and is a big believer in bringing the local tech community together. Check the surf forecast for his likely locale. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ersin"></div>
                 </div>
               </div>
@@ -355,10 +348,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Ewen has over 12 years experience as a web developer and frontend engineer. He has a background in Systems
-                    Engineering and is passionate about technical design, deployment pipelines and mentoring. When he isn’t
-                    shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, tramping
-                    or spending time with his young family.</p>
+                  <p>Ewen is a seasoned web developer and frontend engineer. He has a background in systems engineering and is passionate about technical design, writing awesome code, and playing a leadership role in the development team. Ewen is a keen mentor to the next generation of coders, and is always championing the upskilling of the wider team. When he isn’t shipping code or helping his teammates you might find him playing guitar, juggling, brewing beer, running or spending time with his young family.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/ewen"></div>
                 </div>
               </div>
@@ -394,11 +384,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>A self-confessed “super cliched Canadian”, Fiona loves ice hockey and goes all out for Christmas. She moved
-                    here with her partner, Jeremy, and chihuahua, Megatron, to join the family business, before moving on
-                    to a new set of challenges as Media Suite’s administration superstar. She loves crushing her to-do list(s)
-                    and deftly combines a passion for detail with all things organisation and finances. A pro in pointe shoes,
-                    Fi has promised to teach the devs some ballet &hellip;</p>
+                  <p>A self-confessed “super cliched Canadian”, Fiona loves her chihuahua Megatron, ice hockey and goes all out for Christmas. She loves crushing her to-do list(s) and deftly combines a passion for detail with all things organisation and finances. She also plays the most important office role - Whip Cracker in Chief. A pro in pointe shoes, Fi has promised to teach the devs some ballet &hellip;</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/fiona"></div>
                 </div>
               </div>
@@ -673,11 +659,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Jonathan has over 15 years experience working as a software engineer and then as a project manager on large
-                    IT projects with some of the UKs most well known brands. The lure of the NZ lifestyle and a passion to
-                    get back into code has brought him to Media Suite to join our Node.js team. Jonathan (aka Hollingsworth)
-                    is lucky enough to have settled in Queenstown with his wife and young family where he gets to snowboard
-                    in winter and mountain bike in the summer.</p>
+                  <p>Jonathan, who is surprisingly youthful in appearance, has decades of experience working as a software engineer and is an expert in software architecture. Affectionately known as Hollingsworth (or H, short), moved to the land of the long white cloud with wife Jo, in 2013. He is an Ember fanboy, with a fondness for JS and Python. A family man now, he aims to retire by 55 (hah!), is a keen bike commuter and loves a bit of workplace banter around the coffee machine. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/jonathanh"></div>
                 </div>
               </div>
@@ -794,7 +776,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Julia is a pixel perfectionist and cat fangirl. Having got most her way through a BSc in Computer Science she discovered her passion for the browser and hasn’t looked back. She is passionate about interaction design which brings practicality and flare to her work.</p>
+                  <p>Julia is the ultimate relationship counsellor, deftly ensuring design, UX and development play nice in all our projects. A CSS whiz, she’s focused on consistency and has a keen eye for detail, bringing practicality and flare to her work. Give her a problem, she’s sure to come up with the best fix! If she’s not eating, drinking or cooing over animal memes, she’s lounging in the sun with her dog, Spyro, or lounging on the couch binge watching Netflix with her dog, Spyro. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/julia"></div>
                 </div>
               </div>
@@ -825,6 +807,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Kaylene Wakefield</h2>
                   <h3 class="bio-sub">Business Analyst and Agile Lead</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/kaylenewakefield/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-kaylene.jpg" | prepend: site.baseurl }}" alt="Julia Tokumaru" />
                   </div>
@@ -871,11 +858,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Kerry keeps track of what’s being delivered when, by whom and how we’ll do it. Kerry brings 15 years of
-                    experience in the digital, advertising and creative industries. Gaining knowledge dabbling in design,
-                    development and 3D modelling, before becoming a digital Producer then Project director. In her downtime
-                    she can be found in Bottle Lake Forest with her pup, Ranger, skiing at Mt Hutt or indulging her inner
-                    petrolhead at motorsport events.</p>
+                  <p>Kerry keeps track of what’s being delivered when, by whom and how we’ll do it. Kerry brings a wealth of experience in the digital, advertising and creative industries. Gaining knowledge dabbling in creative and UX design, development and 3D modelling, before becoming a Digital Producer then Project Director. In her downtime she can be found in Bottle Lake Forest with her dog, Ranger, skiing at Mt Hutt or indulging her inner petrolhead at motorsport events.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/kerry"></div>
                 </div>
               </div>
@@ -911,11 +894,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>As a
-                    <strike>recent</strike> convert from Ruby, Mark has blazed his way to being part of our core node.js team. He
-                    has a ton of software and mobile experience, is well versed in Agile methodologies and has a temperament
-                    that could soothe even the Mighty
-                    <strike>Eagle</strike> Unicorn.</p>
+                  <p>Mark plays the role of tech lead with skill and is an Agile master with a love of Javascript-based technologies. He’s a dab hand in web, server and mobile development and can wrangle a group of devs like nobody’s business. Calm under pressure, Mark’s your man for project leadership, pipeline planning and Agile ceremonies. He’s all about living the Kiwi DIY dream, tinkering with his car, and hitting the outdoors with his family.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/mark"></div>
                 </div>
               </div>
@@ -951,8 +930,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Known for his snappy dressing (think waist coat with that top hat) and being ruthlessly efficient, Matt
-                    is one of our core developers who is equally well versed in JavaScript, Python and PHP.</p>
+                  <p>Matt is a man of many talents. He’s a DevOps team member, with a hand in our Support activities, while simultaneously providing development talent and ongoing services for our production applications. He’s ruthlessly efficient and one of our core developers who is equally well versed in JavaScript, Python and PHP. Matt’s a tiny house enthusiast and board game master who dabbles in a bit of theatre and is a keen home brew experimentalist. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/matt"></div>
                 </div>
               </div>
@@ -983,6 +961,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Mitch Statz</h2>
                   <h3 class="bio-sub">Full Stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="http://www.linkedin.com/in/mitch-statz" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-mitch.jpg" | prepend: site.baseurl }}" alt="Mitch Statz" />
                   </div>
@@ -1104,9 +1087,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Sarah is the creative genius behind much of our design and branding work. Being a classically trained artist
-                    and with over 15 years experience as a graphic designer she possesses the ability to deconstruct the
-                    essence of visual ideas down to their elements.</p>
+                  <p>Sarah is the creative genius behind much of our design and branding work. She takes complex ideas and turns them into visual masterpieces. Being a classically trained artist and a graphic designer, she brings a fresh perspective and divergent thinking to the team. Sarah spends her free time chasing around the rescue cat Louie, working in her studio, hanging with her kids and dropping into life drawing classes.</p>
                 </div>
               </div>
             </div>
@@ -1146,10 +1127,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Steve has a background in corporate accounting but rather than convert his Singaporean accounting qualifications
-                    when he moved to NZ he decided to reboot his career into software development. After graduating from
-                    Dev Academy, Steve took up an internship with us - we decided he was too good to lose and is now a part
-                    of our core development team.</p>
+                  <p>Steve heads up our Operations Team, runs the Support Crew, and ensures everything is hunky dory. He’s our testing whiz and plays a committed role in the development of the Media Suite company culture. If something’s broken, Steve makes sure it gets fixed. He’s a keen collector of Apple gadgets and keeps the office stocked with sugary goodness. You’ll find him out and about with his dog, Alfie, buying stuff for Alfie, or posting photos of Alfie. Steve loves Alfie.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/steve"></div>
                 </div>
               </div>
@@ -1179,17 +1157,18 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Stu Craig</h2>
-                  <h3 class="bio-sub">Database Architect</h3>
+                  <h3 class="bio-sub">Data Architect</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/stuart-craig-a35b55/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-stu.jpg" | prepend: site.baseurl }}" alt="Stu Craig" />
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Stu has 20 years experience working as a Software Engineer, Technical Architect and Software Development
-                    Manager in the financial and resources sectors. He has always taken on jobs where he could spend at least
-                    half of his time cutting code. Stu recently gave up “all that enterprise nonsense” and moved to Queenstown
-                    with his wife and two very demanding cats, Tippy and Charley. (Fish birthday cake anyone?) His new location
-                    means he can hit the ski slopes regularly, reserving a healthy disrespect for &ldquo;dem pesky snowboarders&rdquo;.</p>
+                  <p>Stu has decades of experience as a Software Engineer, Technical Architect and Software Development Manager in the financial, natural resources, and government sectors. He has always taken on jobs where he could spend at least half of his time cutting code. Stu lives in Queenstown with his wife and small posse of very demanding cats. His current location means he can hit the ski slopes regularly, chop all the firewood he could ever need, and continue his diatribe on the state of society from the safety of his lifestyle block.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/stu"></div>
                 </div>
               </div>
@@ -1230,10 +1209,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Being tall, Tom has his head in the Cloud (think Amazon Web Services) and is constantly finding great ways
-                    to improve and monitor our hosting infrastructure. With over 15 years using Linux, the command-line-fu
-                    is strong with this one. When he isn't deploying to production, Tom can be found splashing around in
-                    a nearby pool or in the ocean. His suspicious aversion to coffee makes him something of an office curiosity.</p>
+                  <p>Being tall, Tom has his head in the Cloud (think Amazon Web Services). An all-round troubleshooter, go-to guy, and Linux guru, the command-line-fu is strong with this one. When he isn't deploying to production, planning project infrastructure, or keeping our project lights on, Tom can be found splashing around in a nearby pool or ocean. His suspicious aversion to coffee makes him something of an office curiosity.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/tom"></div>
                 </div>
               </div>
@@ -1264,6 +1240,11 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Wayne Carter</h2>
                   <h3 class="bio-sub">Full Stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/wtcarter" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-wayne.jpg" | prepend: site.baseurl }}" alt="Wayne" />
                   </div>
