Update George's illustration (no more walking stick)

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -401,7 +401,7 @@ menuorder: 4
       <div id="person-george" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/george.png " | prepend: site.baseurl }}" alt="George Wills" />
+          <img class="person-image" src="{{ "/img/people/george.png?r=1" | prepend: site.baseurl }}" alt="George Wills" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
