Misc fixes to markup

--- a/src/case-studies/journeys/index.html
+++ b/src/case-studies/journeys/index.html
@@ -13,7 +13,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
       <p>
-        Journeys combines a range of technologies and data sources to provide a real-time road user service. 
+        Journeys combines a range of technologies and data sources to provide a real-time road user service.
       </p>
     </div>
 
@@ -21,7 +21,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
       <div class="case-study-tech">
         <span class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></span>
         <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></span>
-        <span class="tech-icon tech-icon-yii"><img src="{{ "/img/case-studies/tech-silverstripe.png" | prepend: site.baseurl }}" alt="" /></span>
+        <span class="tech-icon tech-icon-silverstripe"><img src="{{ "/img/case-studies/tech-silverstripe.png" | prepend: site.baseurl }}" alt="" /></span>
       </div>
       <div class="case-study-platforms">
         <i class="icon icon-desktop tip"></i>
@@ -46,10 +46,10 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
         The first system of its kind in New Zealand, TfC aimed to advise road users of the ever-changing landscape as infrastructure in the city underwent large scale repair. Transport for Christchurch used three main data sources to provide road users with a real time information service. The original system pulled roadworks information from another Media Suite project, <a href="/case-studies/myworksites/">TMP for Christchurch</a>. It used GeoSmart data (now owned by the AA) to show congestion on main routes, and fed live traffic camera footage through the public-facing website.
       </p>
       <p>
-        TfC proved popular, and in 2014 Transport for Wellington was created to offer the same package of features in the capital. 
+        TfC proved popular, and in 2014 Transport for Wellington was created to offer the same package of features in the capital.
       </p>
       <p>
-        In 2015, NZTA partnered with Media Suite to create the national system in use today, Journeys, which operates in main centres and on State Highways. Journeys offers a broad range of services, targeted at specific user groups. 
+        In 2015, NZTA partnered with Media Suite to create the national system in use today, Journeys, which operates in main centres and on State Highways. Journeys offers a broad range of services, targeted at specific user groups.
       </p>
 
       <h2 class="lowercase">
@@ -57,7 +57,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
       </h2>
 
       <p>
-        Journeys uses a range of technologies to support its features. It uses city-specific infrastructure to provide travel times, delay information and congestion indicators, as well as allowing regional authorities to manually update users on specific events or incidents. Users can view live traffic camera feeds along their route and across the region, as well as access a road-related regional news feed from NZTA. 
+        Journeys uses a range of technologies to support its features. It uses city-specific infrastructure to provide travel times, delay information and congestion indicators, as well as allowing regional authorities to manually update users on specific events or incidents. Users can view live traffic camera feeds along their route and across the region, as well as access a road-related regional news feed from NZTA.
       </p>
 
       <p>
@@ -70,22 +70,22 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
 
       <ul>
         <li>
-          Inductive loops placed under roads at intersections measure congestion levels as cars pass overhead. 
+          Inductive loops placed under roads at intersections measure congestion levels as cars pass overhead.
         </li>
         <li>
-          Radar and fibre optic cables monitor traffic speeds and volumes on Auckland motorways. 
+          Radar and fibre optic cables monitor traffic speeds and volumes on Auckland motorways.
         </li>
         <li>
-          Christchurch City Council’s 200 bluetooth sensors pick up unique identifiers from cellphones and log the time taken to travel from sensor to sensor, in order to map average travel times on main routes. 
+          Christchurch City Council’s 200 bluetooth sensors pick up unique identifiers from cellphones and log the time taken to travel from sensor to sensor, in order to map average travel times on main routes.
         </li>
       </ul>
 
       <p>
-        Tools like Google Maps fill in the blanks wherever a city’s infrastructure is unable to provide a quality picture of road conditions. Systems such as the Traffic Road Event Information System (TREIS) provides information on incidents including weather events, crashes and detours. This information then updates road users through Journeys. 
+        Tools like Google Maps fill in the blanks wherever a city’s infrastructure is unable to provide a quality picture of road conditions. Systems such as the Traffic Road Event Information System (TREIS) provides information on incidents including weather events, crashes and detours. This information then updates road users through Journeys.
       </p>
 
       <p>
-        Journeys will work in conjunction with <a href="/case-studies/myworksites/">MyWorksites</a>, using the system’s real time roadworks data to inform road users. 
+        Journeys will work in conjunction with <a href="/case-studies/myworksites/">MyWorksites</a>, using the system’s real time roadworks data to inform road users.
       </p>
 
       <img src="{{ "/img/case-studies/journeys-tablet.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
@@ -95,15 +95,15 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
       </h2>
 
       <p>
-        Media Suite specialises in User Experience and as a result of work done with NZTA in the road user space, is able to offer a set of functions through Journeys that maximise its usefulness. The system focuses on the following User Groups: 
+        Media Suite specialises in User Experience and as a result of work done with NZTA in the road user space, is able to offer a set of functions through Journeys that maximise its usefulness. The system focuses on the following User Groups:
       </p>
 
       <ul>
         <li>
-          Daily commuters using arterial routes, where services offered by Journeys could mean significant time savings on a daily basis. 
+          Daily commuters using arterial routes, where services offered by Journeys could mean significant time savings on a daily basis.
         </li>
         <li>
-          Commercial operators using the system to inform route decisions and minimise delays. 
+          Commercial operators using the system to inform route decisions and minimise delays.
         </li>
         <li>
           Radio DJs requiring a simple, user-friendly stream of information that can be quickly communicated to road users travelling at peak traffic times.
@@ -118,7 +118,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
       </h2>
 
       <p>
-        Working on a national system that pushes the boundaries of what current technology is capable of. We had some lofty goals with this system and a lot of data to combine into a single platform with maximum functionality. By working in an extremely flexible and agile fashion, we were able to adapt the system to work with existing infrastructure, which varies city to city. The result is a comprehensive picture for road users and a handy tool for shaving valuable time off your daily commute. 
+        Working on a national system that pushes the boundaries of what current technology is capable of. We had some lofty goals with this system and a lot of data to combine into a single platform with maximum functionality. By working in an extremely flexible and agile fashion, we were able to adapt the system to work with existing infrastructure, which varies city to city. The result is a comprehensive picture for road users and a handy tool for shaving valuable time off your daily commute.
       </p>
 
       <div class="quote-section clearfix">
