--- a/src/case-studies/ewater/index.html
+++ b/src/case-studies/ewater/index.html
@@ -19,7 +19,7 @@ excerpt: Marlborough’s water has never been more accessible.
       <div class="case-study-tech">
         <span class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="HTML/CSS" /></span>
         <span title="Ember" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="Ember" /></span>
-        <span title="D3" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-d3.png" | prepend: site.baseurl }}" alt="D3" /></span>
+        <span title="D3" class="tech-icon tech-icon-d3"><img src="{{ "/img/case-studies/tech-d3.png" | prepend: site.baseurl }}" alt="D3" /></span>
         <span title="Node" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="Node" /></span>
         <span title="Postgres" class="tech-icon tech-icon-postgres"><img src="{{ "/img/case-studies/tech-postgres.png" | prepend: site.baseurl }}" alt="Postgres" /></span>
       </div>
